MODIFY gradle source compatability + REFACTOR ApplicationScreen.java + REFACTOR ApplicationAssetManager.java